tests/non-regression/064-err-filter-already-removed.dfd
process A  a
process B  b
~ A
~ A
